--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -11,7 +11,7 @@
 body{
     background-color: hsl(225, 100%, 94%);
     background-image: url('../assets/images/pattern-background-desktop.svg');
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     height: 100%;
     padding: 2.5% 0 0 0;
 }
@@ -166,7 +166,7 @@ body{
 }
 
 .footer-page{
-    padding-top: 40px;
+    padding-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -214,6 +214,10 @@ body{
         font-size: 14.5px;
     }
 
+    .payment-button-container input{
+        padding: 15px 20px 15px 20px;
+    }
+
     .cancel-order-container{
         padding: 0px 0 0 0;
     }
@@ -221,8 +225,12 @@ body{
     .footer-page{
         padding-top: 40px;
         padding-bottom: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 1440px){
+    .footer-page{
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
 }
