--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -126,7 +126,7 @@ body{
     padding: 5px 0 20px 0;
 }
 
-.payment-button-container input{
+.payment-button-container button{
     background-color: hsl(245, 75%, 52%);
     color: white;
     border: none;
@@ -140,7 +140,7 @@ body{
     cursor: pointer;
 }
 
-.payment-button-container input:hover{
+.payment-button-container button:hover{
     background-color: hsl(245, 75%, 72%);
 }
 
@@ -212,10 +212,6 @@ body{
     
     .annual-price{
         font-size: 14.5px;
-    }
-
-    .payment-button-container input{
-        padding: 15px 20px 15px 20px;
     }
 
     .cancel-order-container{
